<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:layout_marginBottom="10sp"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginBottom="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginEnd="10sp"
                android:id="@+id/iv_poster" />

            <TextView
                android:text="@string/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/iv_poster"
                android:layout_toEndOf="@+id/iv_poster"
                android:id="@+id/tv_title" />

            <TextView
                android:text="@string/tv_description"
                android:id="@+id/tv_description"
                android:layout_toRightOf="@+id/iv_poster"
                android:layout_toEndOf="@+id/iv_poster"
                android:layout_below="@+id/tv_title"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tv_users_rating"
                android:id="@+id/tv_users_rating"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/iv_poster"
                android:layout_toEndOf="@+id/iv_poster"
                android:layout_below="@id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tv_release_date"
                android:id="@+id/tv_release_date"
                android:layout_toRightOf="@+id/iv_poster"
                android:layout_toEndOf="@+id/iv_poster"
                android:layout_below="@+id/tv_users_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_reviews_title"
                android:text="@string/tv_reviews_title"
                android:layout_below="@+id/iv_poster"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_below="@+id/tv_reviews_title"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/reviewLinearLayout"
                android:layout_below="@+id/tv_reviews_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>


        </RelativeLayout>


    </ScrollView>



    <!--<ListView-->
        <!--android:id="@+id/reviewListView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
    <!--</ListView>-->


</LinearLayout>